# Rescue

./: .antigravityrules  .gitignore  AI_HANDOFF.md  ARCHITECTURE_MAP.md  GEMINI.md  GEMINI_CHANGELOG.md  README.md  SWARM_SPEC.md  check_db.py  diff.txt  errorlog.txt  implementation.md  jump_logs.txt  package-lock.json  pathlog.txt
.gemini/: settings.json
new_rescue_ui/: .env.example  metadata.json
rescue-ui/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
rescue_swarm_sim/: Agent_Mission_Log.txt  agent.py  agents.py  ai_tools.py  api.py  autopilot.py  database.py  db.py  dev.md  export_playback.py  flow.py  get_next_sector_step.txt  log_dispatcher.txt  log_drone.txt  log_file.txt  logs.json  main.py  map.txt  map_generator.py  mcp_server.py  prompt.txt  read_logs.py  requirements.txt  simulation.py  swarm_state.db  tasks.py  test_logs.py  test_math.py  test_phase2.py  test_phase3.py  tmp_deploy.py  tmp_dummy_flow.py  tmp_list_models.py  (+7 more)
rescue_swarm_sim copy/: agent.py  ai_tools.py  flow.py  requirements.txt  simulation.py
rescue_swarm_sim/swarm_flow/: main.py  partition_result.txt  pyproject.toml
rescue_swarm_sim/swarm_flow/crews/rescue_crew/: drone_tools.py  http_tools.py  mcp_server.py  mcp_server_dispatcher.py  mcp_server_drone.py  reasoning_logger.py  rescue_crew.py
rescue_swarm_sim/swarm_flow/crews/rescue_crew/config/: agents.yaml  tasks.yaml
rescue_swarm_sim/swarm_flow/crews/rescue_crew/prompts/: dispatcher.md  drone_pilot.md
rescue_swarm_sim/swarm_flow/tools/: ascii_map.py  partition.py  state_reader.py
(+63 files in other folders)
